StarBoy - The Weeknd

--- a/index.html
+++ b/index.html
@@ -133,6 +133,9 @@
       ],
       "Taifa Yallah": [
         { name: "Causa", image: "img/causa.jpg" }
+      ],
+      "The Weeknd": [
+        { name: "Starboy", image: "img/starboy.jpg" }
       ]
     };
 
