Eladio Carrión - DON KBRN

--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
       "Diego900": [
         { name: "La Espalda Del Sol", image: "img/espalda.jpeg" }
       ],
+      "Eladio Carrión": [
+        { name: "DON KBRON", image: "img/kbron.jpeg" }
+      ],
       "Elio Toffana": [
         { name: "Shock Wave", image: "img/wave.jpg" }
       ],
