--- a/index.html
+++ b/index.html
@@ -134,6 +134,9 @@
       "Sen Senra": [
         { name: "Sensaciones", image: "img/sens.jpg" }
       ],
+      "SZA": [
+        { name: "Ctrl", image: "img/ctrl.jpg" }
+      ],
       "Taifa Yallah": [
         { name: "Causa", image: "img/causa.jpg" }
       ],
