Sencillez de los filtros

--- a/index.html
+++ b/index.html
@@ -77,73 +77,73 @@
   <script>
     const data = {
       "C. Tangana": [
-        { name: "Avida Dollars", image: "img/dollars.jpg", tags: ["rap", "urbano", "trap"] },
-        { name: "El Madrileño", image: "img/mad.jpeg", tags: ["flamenco", "fusión", "latino"] }
+        { name: "Avida Dollars", image: "img/dollars.jpg", tags: ["rap"] },
+        { name: "El Madrileño", image: "img/mad.jpeg", tags: ["fusión", "flamenco"] }
       ],
       "Choclock": [
-        { name: "Daltónico pero me siento Azul", image: "img/dalton.jpeg", tags: ["r&b", "soul", "trap suave"] }
+        { name: "Daltónico pero me siento Azul", image: "img/dalton.jpeg", tags: ["r&b"] }
       ],
       "Cruz Cafuné": [
-        { name: "Blu€s", image: "img/azul.jpg", tags: ["trap", "urbano", "r&b"] },
-        { name: "Me Muevo Con Dios", image: "img/MMCD.png", tags: ["rap", "urbano", "experimental"] }
+        { name: "Blu€s", image: "img/azul.jpg", tags: ["trap"] },
+        { name: "Me Muevo Con Dios", image: "img/MMCD.png", tags: ["rap"] }
       ],
       "Dellafuente": [
-        { name: "Ansia Viva", image: "img/ansia.jpg", tags: ["trap", "flamenco", "fusión"] },
-        { name: "Torii Yama", image: "img/yama.jpg", tags: ["trap", "experimental", "urbano"] },
-        { name: "Lagrimas pa otro dia", image: "img/lagrimas.jpg", tags: ["flamenco", "urbano", "soul"] }
+        { name: "Ansia Viva", image: "img/ansia.jpg", tags: ["trap", "flamenco"] },
+        { name: "Torii Yama", image: "img/yama.jpg", tags: ["trap"] },
+        { name: "Lagrimas pa otro dia", image: "img/lagrimas.jpg", tags: ["flamenco"] }
       ],
       "Diego900": [
-        { name: "La Espalda Del Sol", image: "img/espalda.jpeg", tags: ["rap", "underground", "boombap"] }
+        { name: "La Espalda Del Sol", image: "img/espalda.jpeg", tags: ["rap"] }
       ],
       "Eladio Carrión": [
-        { name: "DON KBRON", image: "img/kbron.jpeg", tags: ["trap", "reggaetón", "urbano"] }
+        { name: "DON KBRON", image: "img/kbron.jpeg", tags: ["trap"] }
       ],
       "Elio Toffana": [
-        { name: "Shock Wave", image: "img/wave.jpg", tags: ["rap", "boombap", "underground"] }
+        { name: "Shock Wave", image: "img/wave.jpg", tags: ["rap"] }
       ],
       "Enry-K": [
-        { name: "KDOT", image: "img/dot.jpg", tags: ["trap", "electrónica", "urbano"] },
-        { name: "Luz Rosa", image: "img/rosa.jpeg", tags: ["trap suave", "pop", "experimental"] }
+        { name: "KDOT", image: "img/dot.jpg", tags: ["trap"] },
+        { name: "Luz Rosa", image: "img/rosa.jpeg", tags: ["pop", "trap"] }
       ],
       "Extremoduro": [
-        { name: "Canciones Prohibidas", image: "img/canciones.jpeg", tags: ["rock", "rock español", "hard rock"] }
+        { name: "Canciones Prohibidas", image: "img/canciones.jpeg", tags: ["rock"] }
       ],
       "Judelline": [
-        { name: "Bodhiria", image: "img/bodhiria.jpg", tags: ["r&b", "alternativo", "experimental"] }
+        { name: "Bodhiria", image: "img/bodhiria.jpg", tags: ["r&b"] }
       ],
       "Juicy Bae": [
-        { name: "Antes De Conocerte", image: "img/antes.jpg", tags: ["trap", "r&b", "urbano"] },
-        { name: "El Secreto", image: "img/secreto.jpg", tags: ["r&b", "alternativo", "soul"] },
-        { name: "PTSD", image: "img/ptsd.jpg", tags: ["trap", "r&b", "melancólico"] }
+        { name: "Antes De Conocerte", image: "img/antes.jpg", tags: ["trap", "r&b"] },
+        { name: "El Secreto", image: "img/secreto.jpg", tags: ["r&b"] },
+        { name: "PTSD", image: "img/ptsd.jpg", tags: ["trap"] }
       ],
       "Quevedo": [
-        { name: "Buenas Noches", image: "img/noches.jpg", tags: ["reggaetón", "trap", "urbano"] }
+        { name: "Buenas Noches", image: "img/noches.jpg", tags: ["reggaetón"] }
       ],
       "Raul Clyde": [
-        { name: "Destino 2014", image: "img/destino.jpeg", tags: ["rap", "emo rap", "underground"] }
+        { name: "Destino 2014", image: "img/destino.jpeg", tags: ["rap"] }
       ],
       "Recycled J": [
-        { name: "Casanova", image: "img/casanova.jpg", tags: ["pop", "urbano", "r&b"] },
-        { name: "Preludio", image: "img/pre.jpg", tags: ["rap", "boombap", "urbano"] }
+        { name: "Casanova", image: "img/casanova.jpg", tags: ["pop"] },
+        { name: "Preludio", image: "img/pre.jpg", tags: ["rap"] }
       ],
       "Rels B": [
-        { name: "A New Star", image: "img/star.jpeg", tags: ["pop", "trap suave", "r&b"] }
+        { name: "A New Star", image: "img/star.jpeg", tags: ["pop"] }
       ],
       "Rosalia": [
-        { name: "El Mal Querer", image: "img/querer.jpg", tags: ["flamenco", "pop", "experimental"] },
-        { name: "Motomami", image: "img/moto.jpg", tags: ["experimental", "pop", "urbano"] }
+        { name: "El Mal Querer", image: "img/querer.jpg", tags: ["flamenco", "fusión"] },
+        { name: "Motomami", image: "img/moto.jpg", tags: ["pop", "experimental"] }
       ],
       "Sen Senra": [
-        { name: "Sensaciones", image: "img/sens.jpg", tags: ["pop", "alternativo", "indie"] }
+        { name: "Sensaciones", image: "img/sens.jpg", tags: ["pop"] }
       ],
       "SZA": [
-        { name: "Ctrl", image: "img/ctrl.jpg", tags: ["r&b", "neo soul", "alternativo"] }
+        { name: "Ctrl", image: "img/ctrl.jpg", tags: ["r&b"] }
       ],
       "Taifa Yallah": [
-        { name: "Causa", image: "img/causa.jpg", tags: ["rap", "afrotrap", "alternativo"] }
+        { name: "Causa", image: "img/causa.jpg", tags: ["rap"] }
       ],
       "The Weeknd": [
-        { name: "Starboy", image: "img/starboy.jpg", tags: ["pop", "r&b", "synthpop"] }
+        { name: "Starboy", image: "img/starboy.jpg", tags: ["pop"] }
       ]
     };
 
