--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         { name: "Buenas Noches", image: "img/noches.jpg", tags: ["reggaetón"] }
       ],
       "Raul Clyde": [
-        { name: "Destino 2014", image: "img/destino.jpeg", tags: ["rap"] }
+        { name: "Destino 2014", image: "img/destino.jpeg", tags: ["reggaetón"] }
       ],
       "Recycled J": [
         { name: "Casanova", image: "img/casanova.jpg", tags: ["pop"] },
@@ -143,7 +143,7 @@
         { name: "Causa", image: "img/causa.jpg", tags: ["rap"] }
       ],
       "The Weeknd": [
-        { name: "Starboy", image: "img/starboy.jpg", tags: ["pop"] }
+        { name: "Starboy", image: "img/starboy.jpg", tags: ["pop", "r&b"] }
       ]
     };
 
