Dano - Nuevos Trapos

--- a/index.html
+++ b/index.html
@@ -87,6 +87,10 @@
         { name: "Blu€s", image: "img/azul.jpg", tags: ["trap"] },
         { name: "Me Muevo Con Dios", image: "img/MMCD.png", tags: ["rap"] }
       ],
+      "Dano": [
+        { name: "Nuevos Trapos", image: "img/trapos.jpeg", tags: ["rap"] }
+      ],
+
       "Dellafuente": [
         { name: "Ansia Viva", image: "img/ansia.jpg", tags: ["trap", "flamenco"] },
         { name: "Torii Yama", image: "img/yama.jpg", tags: ["trap"] },
