Links al album en Spotify

--- a/index.html
+++ b/index.html
@@ -77,79 +77,79 @@
   <script>
     const data = {
       "C. Tangana": [
-        { name: "Avida Dollars", image: "img/dollars.jpg", tags: ["rap"] },
-        { name: "El Madrileño", image: "img/mad.jpeg", tags: ["fusión", "flamenco"] }
+        { name: "Avida Dollars", image: "img/dollars.jpg", tags: ["rap"], url: "https://open.spotify.com/album/7Dl3kd377FvNAEVHHOMSTM?si=cFDrlHX7TQ6fKeVtiIr-dg" },
+        { name: "El Madrileño", image: "img/mad.jpeg", tags: ["fusión", "flamenco"], url: "https://open.spotify.com/album/52QyC9nSbgtHFXyQRHsXJ9?si=NcbMIrJzTcWSAqImcDSruQ" }
       ],
       "Choclock": [
-        { name: "Daltónico pero me siento Azul", image: "img/dalton.jpeg", tags: ["r&b"] }
+        { name: "Daltónico pero me siento Azul", image: "img/dalton.jpeg", tags: ["r&b"], url: "https://open.spotify.com/album/2GS4OCw6wd47mu7OFdzWFH?si=haHGo6mpSDGvoteUFQ63tQ" }
       ],
       "Cruz Cafuné": [
-        { name: "Blu€s", image: "img/azul.jpg", tags: ["trap"] },
-        { name: "Me Muevo Con Dios", image: "img/MMCD.png", tags: ["rap"] }
+        { name: "Blu€s", image: "img/azul.jpg", tags: ["trap"], url: "https://open.spotify.com/album/EXAMPLE" },
+        { name: "Me Muevo Con Dios", image: "img/MMCD.png", tags: ["rap"], url: "https://open.spotify.com/album/EXAMPLE" }
       ],
       "Dano": [
-        { name: "Nuevos Trapos", image: "img/trapos.jpeg", tags: ["rap"] }
+        { name: "Nuevos Trapos", image: "img/trapos.jpeg", tags: ["rap"], url: "https://open.spotify.com/album/EXAMPLE" }
       ],
-
       "Dellafuente": [
-        { name: "Ansia Viva", image: "img/ansia.jpg", tags: ["trap", "flamenco"] },
-        { name: "Torii Yama", image: "img/yama.jpg", tags: ["trap"] },
-        { name: "Lagrimas pa otro dia", image: "img/lagrimas.jpg", tags: ["flamenco"] }
+        { name: "Ansia Viva", image: "img/ansia.jpg", tags: ["trap", "flamenco"], url: "https://open.spotify.com/album/EXAMPLE" },
+        { name: "Torii Yama", image: "img/yama.jpg", tags: ["trap"], url: "https://open.spotify.com/album/EXAMPLE" },
+        { name: "Lagrimas pa otro dia", image: "img/lagrimas.jpg", tags: ["flamenco"], url: "https://open.spotify.com/album/EXAMPLE" }
       ],
       "Diego900": [
-        { name: "La Espalda Del Sol", image: "img/espalda.jpeg", tags: ["rap"] }
+        { name: "La Espalda Del Sol", image: "img/espalda.jpeg", tags: ["rap"], url: "https://open.spotify.com/album/EXAMPLE" }
       ],
       "Eladio Carrión": [
-        { name: "DON KBRON", image: "img/kbron.jpeg", tags: ["trap"] }
+        { name: "DON KBRON", image: "img/kbron.jpeg", tags: ["trap"], url: "https://open.spotify.com/album/EXAMPLE" }
       ],
       "Elio Toffana": [
-        { name: "Shock Wave", image: "img/wave.jpg", tags: ["rap"] }
+        { name: "Shock Wave", image: "img/wave.jpg", tags: ["rap"], url: "https://open.spotify.com/album/EXAMPLE" }
       ],
       "Enry-K": [
-        { name: "KDOT", image: "img/dot.jpg", tags: ["trap"] },
-        { name: "Luz Rosa", image: "img/rosa.jpeg", tags: ["pop", "trap"] }
+        { name: "KDOT", image: "img/dot.jpg", tags: ["trap"], url: "https://open.spotify.com/album/EXAMPLE" },
+        { name: "Luz Rosa", image: "img/rosa.jpeg", tags: ["pop", "trap"], url: "https://open.spotify.com/album/EXAMPLE" }
       ],
       "Extremoduro": [
-        { name: "Canciones Prohibidas", image: "img/canciones.jpeg", tags: ["rock"] }
+        { name: "Canciones Prohibidas", image: "img/canciones.jpeg", tags: ["rock"], url: "https://open.spotify.com/album/EXAMPLE" }
       ],
       "Judelline": [
-        { name: "Bodhiria", image: "img/bodhiria.jpg", tags: ["r&b"] }
+        { name: "Bodhiria", image: "img/bodhiria.jpg", tags: ["r&b"], url: "https://open.spotify.com/album/EXAMPLE" }
       ],
       "Juicy Bae": [
-        { name: "Antes De Conocerte", image: "img/antes.jpg", tags: ["trap", "r&b"] },
-        { name: "El Secreto", image: "img/secreto.jpg", tags: ["r&b"] },
-        { name: "PTSD", image: "img/ptsd.jpg", tags: ["trap"] }
+        { name: "Antes De Conocerte", image: "img/antes.jpg", tags: ["trap", "r&b"], url: "https://open.spotify.com/album/EXAMPLE" },
+        { name: "El Secreto", image: "img/secreto.jpg", tags: ["r&b"], url: "https://open.spotify.com/album/EXAMPLE" },
+        { name: "PTSD", image: "img/ptsd.jpg", tags: ["trap"], url: "https://open.spotify.com/album/EXAMPLE" }
       ],
       "Quevedo": [
-        { name: "Buenas Noches", image: "img/noches.jpg", tags: ["reggaetón"] }
+        { name: "Buenas Noches", image: "img/noches.jpg", tags: ["reggaetón"], url: "https://open.spotify.com/album/EXAMPLE" }
       ],
       "Raul Clyde": [
-        { name: "Destino 2014", image: "img/destino.jpeg", tags: ["reggaetón"] }
+        { name: "Destino 2014", image: "img/destino.jpeg", tags: ["reggaetón"], url: "https://open.spotify.com/album/EXAMPLE" }
       ],
       "Recycled J": [
-        { name: "Casanova", image: "img/casanova.jpg", tags: ["pop"] },
-        { name: "Preludio", image: "img/pre.jpg", tags: ["rap"] }
+        { name: "Casanova", image: "img/casanova.jpg", tags: ["pop"], url: "https://open.spotify.com/album/EXAMPLE" },
+        { name: "Preludio", image: "img/pre.jpg", tags: ["rap"], url: "https://open.spotify.com/album/EXAMPLE" }
       ],
       "Rels B": [
-        { name: "A New Star", image: "img/star.jpeg", tags: ["pop"] }
+        { name: "A New Star", image: "img/star.jpeg", tags: ["pop"], url: "https://open.spotify.com/album/EXAMPLE" }
       ],
       "Rosalia": [
-        { name: "El Mal Querer", image: "img/querer.jpg", tags: ["flamenco", "fusión"] },
-        { name: "Motomami", image: "img/moto.jpg", tags: ["pop", "experimental"] }
+        { name: "El Mal Querer", image: "img/querer.jpg", tags: ["flamenco", "fusión"], url: "https://open.spotify.com/album/1IM3GwptCGYjRkzCBolyFK" },
+        { name: "Motomami", image: "img/moto.jpg", tags: ["pop", "experimental"], url: "https://open.spotify.com/album/6jHuoYW4El7wPlpnLd8sLp" }
       ],
       "Sen Senra": [
-        { name: "Sensaciones", image: "img/sens.jpg", tags: ["pop"] }
+        { name: "Sensaciones", image: "img/sens.jpg", tags: ["pop"], url: "https://open.spotify.com/album/EXAMPLE" }
       ],
       "SZA": [
-        { name: "Ctrl", image: "img/ctrl.jpg", tags: ["r&b"] }
+        { name: "Ctrl", image: "img/ctrl.jpg", tags: ["r&b"], url: "https://open.spotify.com/album/76290XdXVF9rPzGdNRWdCh" }
       ],
       "Taifa Yallah": [
-        { name: "Causa", image: "img/causa.jpg", tags: ["rap"] }
+        { name: "Causa", image: "img/causa.jpg", tags: ["rap"], url: "https://open.spotify.com/album/EXAMPLE" }
       ],
       "The Weeknd": [
-        { name: "Starboy", image: "img/starboy.jpg", tags: ["pop", "r&b"] }
+        { name: "Starboy", image: "img/starboy.jpg", tags: ["pop", "r&b"], url: "https://open.spotify.com/album/2ODvWsOgouMbaA5xf0RkJe" }
       ]
     };
+
 
 
     let masonry;
