--- a/index.html
+++ b/index.html
@@ -84,29 +84,29 @@
         { name: "Daltónico pero me siento Azul", image: "img/dalton.jpeg", tags: ["r&b"], url: "https://open.spotify.com/album/2GS4OCw6wd47mu7OFdzWFH?si=haHGo6mpSDGvoteUFQ63tQ" }
       ],
       "Cruz Cafuné": [
-        { name: "Blu€s", image: "img/azul.jpg", tags: ["trap"], url: "https://open.spotify.com/album/EXAMPLE" },
-        { name: "Me Muevo Con Dios", image: "img/MMCD.png", tags: ["rap"], url: "https://open.spotify.com/album/EXAMPLE" }
+        { name: "Blu€s", image: "img/azul.jpg", tags: ["trap"], url: "https://open.spotify.com/album/4cdd2jx9GScUzDETwJ6GEk?si=tZZmB9rETieP-sSn2EiECg" },
+        { name: "Me Muevo Con Dios", image: "img/MMCD.png", tags: ["rap"], url: "https://open.spotify.com/album/7yvmtCjHcBe9DqIVl7AwQT?si=BAss2UN2TweO1nm94DlFlQ" }
       ],
       "Dano": [
-        { name: "Nuevos Trapos", image: "img/trapos.jpeg", tags: ["rap"], url: "https://open.spotify.com/album/EXAMPLE" }
+        { name: "Nuevos Trapos", image: "img/trapos.jpeg", tags: ["rap"], url: "https://open.spotify.com/album/05QwR4mSOlpHbtYFAOcB4f?si=ioYz7V1mTcyOLSoKBAJqXg" }
       ],
       "Dellafuente": [
-        { name: "Ansia Viva", image: "img/ansia.jpg", tags: ["trap", "flamenco"], url: "https://open.spotify.com/album/EXAMPLE" },
-        { name: "Torii Yama", image: "img/yama.jpg", tags: ["trap"], url: "https://open.spotify.com/album/EXAMPLE" },
-        { name: "Lagrimas pa otro dia", image: "img/lagrimas.jpg", tags: ["flamenco"], url: "https://open.spotify.com/album/EXAMPLE" }
+        { name: "Ansia Viva", image: "img/ansia.jpg", tags: ["trap", "flamenco"], url: "https://open.spotify.com/album/03a68tDUXs4dX7nVcVfJAn?si=56CIT1zVR6et29JT82wtpQ" },
+        { name: "Torii Yama", image: "img/yama.jpg", tags: ["trap"], url: "https://open.spotify.com/album/6zSKkBQfQs3B9YncN3SGyI?si=lvqw3dcXQD6YTAv6J0EAHQ" },
+        { name: "Lagrimas pa otro dia", image: "img/lagrimas.jpg", tags: ["flamenco"], url: "https://open.spotify.com/album/3cPRpK8yUQV5T6QTt7XGfp?si=Iccqtrc4QC6_YJE1aFPGyg" }
       ],
       "Diego900": [
-        { name: "La Espalda Del Sol", image: "img/espalda.jpeg", tags: ["rap"], url: "https://open.spotify.com/album/EXAMPLE" }
+        { name: "La Espalda Del Sol", image: "img/espalda.jpeg", tags: ["rap"], url: "https://open.spotify.com/album/0EMwFzMU6W8VlWVy6NKPUu?si=hCBaZcdGREGk2pUhbpJRmA" }
       ],
       "Eladio Carrión": [
-        { name: "DON KBRON", image: "img/kbron.jpeg", tags: ["trap"], url: "https://open.spotify.com/album/EXAMPLE" }
+        { name: "DON KBRON", image: "img/kbron.jpeg", tags: ["trap"], url: "https://open.spotify.com/album/77WXheyyYBkqqz6Q19l37a?si=LZGEvDmVTsuwGQeiY__IxA" }
       ],
       "Elio Toffana": [
-        { name: "Shock Wave", image: "img/wave.jpg", tags: ["rap"], url: "https://open.spotify.com/album/EXAMPLE" }
+        { name: "Shock Wave", image: "img/wave.jpg", tags: ["rap"], url: "https://open.spotify.com/album/17D4dmW8j9e7UD301XGz0m?si=v5BXpuOER7eIv0_cakd3gw" }
       ],
       "Enry-K": [
-        { name: "KDOT", image: "img/dot.jpg", tags: ["trap"], url: "https://open.spotify.com/album/EXAMPLE" },
-        { name: "Luz Rosa", image: "img/rosa.jpeg", tags: ["pop", "trap"], url: "https://open.spotify.com/album/EXAMPLE" }
+        { name: "DOT.", image: "img/dot.jpg", tags: ["trap"], url: "https://open.spotify.com/album/3jEhw84FzMpeLncX7cy6OF?si=1fJ6op5URSmorp3AiyI5mA" },
+        { name: "Luz Rosa", image: "img/rosa.jpeg", tags: ["pop", "trap"], url: "https://open.spotify.com/album/7LzrBmi5dTqST3lPfeKbDP?si=1-FlqUOoRbKVairV-v6f0g" }
       ],
       "Extremoduro": [
         { name: "Canciones Prohibidas", image: "img/canciones.jpeg", tags: ["rock"], url: "https://open.spotify.com/album/EXAMPLE" }
